Started rust impl

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 obj-m += kmain_lox.o
-SRCS := chunk.c compile.c debug.c kmain.c memory.c object.c scanner.c table.c value.c vm.c buffio.c kmain.c loxentry.c
+SRCS := chunk.c compile.c debug.c kmain.c memory.c object.c scanner.c table.c value.c vm.c buffio.c kmain.c
 kmain_lox-y := $(SRCS:.c=.o)
 KBUILD_CFLAGS += -W -O3 -g0 
 all:
